@@ -1,3 +1,8 @@
+2003-11-07  Masao Mutoh  <mutoh@highway.ne.jp>
+
+	* src/rbgtkwidget.c: Fix a bug for Gtk::Widget#style_get_property.
+	Add Gtk::Widget.style_properties.
+
 2003-11-03  Masao Mutoh  <mutoh@highway.ne.jp>
 
 	* src/rbgdk.c: Add Gdk.display_arg_name, .set_locale, 
